// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders The Layout Correctly With Multiple Element 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="two-column-container container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-one col-2 col"
          >
            <div
              class="colOne-direction-wrapper  row"
            >
              <div
                class="colOne-header-element-0 col"
              >
                <div>
                  <div>
                    One
                  </div>
                </div>
              </div>
              <div
                class="colOne-header-element-1 col"
              >
                <div>
                  <div>
                    Two
                  </div>
                </div>
              </div>
              <div
                class="colOne-header-element-2 col"
              >
                <div>
                  <div>
                    Three
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-two col col"
          >
            <div
              class="colTwo-direction-wrapper  row"
            >
              <div
                class="colTwo-header-element-0 col"
              >
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="two-column-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-one col-2 col"
        >
          <div
            class="colOne-direction-wrapper  row"
          >
            <div
              class="colOne-header-element-0 col"
            >
              <div>
                <div>
                  One
                </div>
              </div>
            </div>
            <div
              class="colOne-header-element-1 col"
            >
              <div>
                <div>
                  Two
                </div>
              </div>
            </div>
            <div
              class="colOne-header-element-2 col"
            >
              <div>
                <div>
                  Three
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-two col col"
        >
          <div
            class="colTwo-direction-wrapper  row"
          >
            <div
              class="colTwo-header-element-0 col"
            >
              <div />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Renders The Layout Correctly With One Element In Each Columnm 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="two-column-container container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-one col-2 col"
          >
            <div
              class="colOne-direction-wrapper  row"
            >
              <div
                class="colOne-header-element-0 col"
              >
                <div>
                  <div>
                    Hello World
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-two col col"
          >
            <div
              class="colTwo-direction-wrapper  row"
            >
              <div
                class="colTwo-header-element-0 col"
              >
                <div>
                  <div>
                    Goodbye World
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="two-column-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-one col-2 col"
        >
          <div
            class="colOne-direction-wrapper  row"
          >
            <div
              class="colOne-header-element-0 col"
            >
              <div>
                <div>
                  Hello World
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-two col col"
        >
          <div
            class="colTwo-direction-wrapper  row"
          >
            <div
              class="colTwo-header-element-0 col"
            >
              <div>
                <div>
                  Goodbye World
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Renders The Layout Correctly With Overridden Bootstrap 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="two-column-container container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-one d-none col"
          >
            <div
              class="colOne-direction-wrapper  row"
            >
              <div
                class="colOne-header-element-0 col"
              >
                <div>
                  <div>
                    One
                  </div>
                </div>
              </div>
              <div
                class="colOne-header-element-1 col"
              >
                <div>
                  <div>
                    Two
                  </div>
                </div>
              </div>
              <div
                class="colOne-header-element-2 col"
              >
                <div>
                  <div>
                    Three
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-two d-none col"
          >
            <div
              class="colTwo-direction-wrapper  row"
            >
              <div
                class="colTwo-header-element-0 col"
              >
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="two-column-container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-one d-none col"
        >
          <div
            class="colOne-direction-wrapper  row"
          >
            <div
              class="colOne-header-element-0 col"
            >
              <div>
                <div>
                  One
                </div>
              </div>
            </div>
            <div
              class="colOne-header-element-1 col"
            >
              <div>
                <div>
                  Two
                </div>
              </div>
            </div>
            <div
              class="colOne-header-element-2 col"
            >
              <div>
                <div>
                  Three
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-two d-none col"
        >
          <div
            class="colTwo-direction-wrapper  row"
          >
            <div
              class="colTwo-header-element-0 col"
            >
              <div />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
